--- a/test/config/nsd.conf
+++ b/test/config/nsd.conf
@@ -2,7 +2,7 @@ server:
   server-count: 1
   ip4-only: yes
   hide-version: yes
-  identity: ""
+  identity: "nsd test"
   zonesdir: "/zones"
 
 remote-control:
