--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-        run: git submodule update --init --recursive
+        with:
+          submodules: 'recursive'
       -
         name: Setup docker
         uses: crazy-max/ghaction-docker-buildx@v1
