--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,15 @@ jobs:
         with:
           submodules: 'recursive'
       -
-        name: Setup docker
-        uses: crazy-max/ghaction-docker-buildx@v2
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
         with:
-          buildx-version: latest
-          skip-cache: false
-          qemu-version: latest
+          platforms: all
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
       -
         name: Makefile
         run: make all
